# studia

./: .gitignore  LICENSE  README.md
.github/workflows/: pp.yaml  tep.yaml
AI/: .gitignore
AI/laby01/: 2test_astar copy.py  astar_time.py  astar_time_przesiadki copy.py  astar_time_przesiadki.py  djikstra.ipynb  djikstra.py  raport.tex  run_astar.py  run_dijkstra.py  run_tabu.py  run_tabu_fast.py  station_coordinates.pkl  test-astar-transfers.sh  test-djikstra.sh  test-tabu.sh  test.sh  test_astar.py  test_tabu.py  utils.py
AI/laby02/: main.py  main_test.py  (+1 more)
HD/: eda2.py  eda3.py
JezykiSkryptowe/laby01/: .gitignore  1_streamlit.py  2_1_langchain.ipynb  2_2_langchain.ipynb  2_langchain.py  3_final.py  app.py  main.py  pyproject.toml  requirements.txt  streaming.py
JezykiSkryptowe/laby02/: biggest_asset.py  count_status_code.py  echo.py  get_biggest_asset.py  get_media_ratio.py  get_status_code_count.py  get_traffic_in_gigabytes.py  log_parser.py  mario.py  only_200.py  only_friday.py  only_night_assets.py  only_poland.py  pyproject.toml  test1.sh  test2.sh
JezykiSkryptowe/laby02/cli/: parse_stdio.py
JezykiSkryptowe/laby04/: pyproject.toml
JezykiSkryptowe/laby04/laby04/: analyzeText.mjs  analyze_text.py  print_env.py  print_path.py  tail.py
JezykiSkryptowe/laby04/laby04/backup/: backup.py  restore.py  utils.py
JezykiSkryptowe/laby06/: pyproject.toml
JezykiSkryptowe/laby06/laby06/: SSHLogEntry.py  SSHLogJournal.py  SSHUser.py  main.py
JezykiSkryptowe/laby07/: pyproject.toml
JezykiSkryptowe/laby07/laby07/: zad1.py  zad2.py  zad3.py  zad4.py  zad5.py  zad6.py
JezykiSkryptowe/laby07/tests/: test_zad1.py  test_zad2.py  test_zad3.py  test_zad4.py  test_zad5.py
JezykiSkryptowe/laby08/: gui.py  pyproject.toml
JezykiSkryptowe/laby08/laby08/: browser.py  detail_viewer.py  file_manager.py  log_parser.py  main.py
JezykiSkryptowe/projekt/backend/: .env.example  .gitignore  alembic.ini  pyproject.toml
JezykiSkryptowe/projekt/backend/backend/: __init__.py  agent.py  app.py  models.py
JezykiSkryptowe/projekt/backend/backend/agents/: agent.py  rag.py  title_agent.py
JezykiSkryptowe/projekt/backend/backend/alembic/: env.py
JezykiSkryptowe/projekt/backend/backend/alembic/versions/: 053dc8fd05d5_add_message_kind.py  162f7681c6d6_add_thread_and_message.py  469f2952759e_add_sent_by.py  aec1026e7ef0_add_file_model.py
JezykiSkryptowe/projekt/backend/backend/api/: deps.py  file_router.py
JezykiSkryptowe/projekt/backend/backend/core/: config.py  db.py
MSiD/: GDP_happiness.csv  mario.sh
MSiD/laby01/: pyproject.toml
MSiD/laby01/exercise_latex/: main.tex
MSiD/laby02/: 2_obsluga_danych_i_obliczen.ipynb  main.py  pyproject.toml  task.py
MSiD/laby03/: answer.txt  pyproject.toml
MSiD/laby03/laby03/: lss.py  new.ipynb  notebook.ipynb  test_lss.py
MSiD/laby04/: pyproject.toml
MSiD/laby04/laby04/: classification.py  test_classification.py
MSiD/laby05/: 5_optymalizacja.ipynb  pyproject.toml
MSiD/laby05/laby05/: optimisation_problem.py  test_optimisation_problem.py
MSiD/projekt/: README.md  docker-compose.yml  makefile  pyproject.toml  seed.sh
MSiD/projekt/docs/: .gitignore  main.tex
MSiD/projekt/notebooks/: eda.ipynb
MSiD/projekt/projekt/: test.ipynb
MSiD/projekt/src/: add_geo_data.py  filter_data.py  get_data.py  model.py
MSiD/projekt/src/plots/: area_regression.py  difference_in_price_of_best_offers.py  distance_regression.py  distribution_price.py  generate.py  mean_price_over_number_of_rooms.py  model_vs_data.py  preliminary_analysis.py  price_over_time.py  rooms_price_distribution.py
PP/: dune-project  java.sh  ocaml  paradygmatyprogramowania.opam  project.scala  test.sh
PP/cwiczenia/01/: cwiczenia01.scala  cwiczenia01.test.scala  dune  main.ml  main.scala  main.test.scala  main_test.ml
PP/cwiczenia/02/: cwiczenia02.scala  cwiczenia02.test.scala  dune  main.ml
PP/cwiczenia/03/: cwiczenia03.scala  cwiczenia03.test.scala  dune  main.ml  main_test.ml
PP/cwiczenia/04/: cwiczenia04.scala  cwiczenia04.test.scala  dune  main.ml  main_test.ml
PP/laby/01/: dune  main.ml  mainLaby01.scala  mainLaby01.test.scala  main_test.ml
PP/laby/02/: dune  main.ml  mainLaby02.scala  mainLaby02.test.scala  main_test.ml
PP/laby/03/: dune  main.ml  mainLaby03.scala  mainLaby03.test.scala  main_test.ml
PP/laby/04/: dune  main.ml  mainLaby04.scala  mainLaby04.test.scala  main_test.ml
PP/laby/05/: dune  main.ml  mainLaby05.scala  mainLaby05.test.scala  main_test.ml
PP/laby/06/: dune  main.ml  mainLaby06.scala  mainLaby06.test.scala  main_test.ml
PP/laby/07/: dune  main.ml  main_test.ml
PP/laby/08/: Main.java
PP/laby/08/Niepolimorficzne/: Box.java  BoxType.java  Elf.java
PP/laby/08/Polimorficzne/: Box.java  ConeBox.java  CuboidBox.java  CylinderBox.java  Elf.java  SphereBox.java
PP/laby/09/: mainLaby09.scala  mainLaby09.test.scala
TEP/: .clang-tidy  CMakeLists.txt  README.md  doctest.h  main.cpp  requirements.txt  run.py  test.sh
TEP/laby01/: Table.cpp  Table.h  lista1.test.cpp  lista1.test.h
TEP/laby02/: Number.cpp  Number.h  Numer.cpp  lista2.test.cpp
TEP/laby03/: Node.cpp  Node.h  Tree.cpp  Tree.h  UIInterface.cpp  UIInterface.h  lista3.test.cpp  main.cpp  stringUtils.cpp  stringUtils.h
TEP/laby03/Nodes/: NodeTemplate.h  PlusNode.cpp  PlusNode.h
TEP/laby04/: Node.cpp  Node.h  Tree.h  UIInterface.cpp  UIInterface.h  lista4.test.cpp  main.cpp  stringUtils.cpp  stringUtils.h
TEP/laby05/: MyPointer.h  Node.cpp  Node.h  RefCounter.cpp  RefCounter.h  Tree.h  UIInterface.h  lista5.test.cpp  main.cpp  stringUtils.cpp  stringUtils.h
TEP/miniprojekt/: AGChallenge.sln  README.md
TEP/miniprojekt/AGChallenge/: AGChallenge.vcxproj  AGChallenge.vcxproj.filters  Evaluator.cpp  Evaluator.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  IEvaluator.h  Individual.cpp  Individual.h  Main.cpp  MyMath.cpp  MyMath.h  NETsimulator.cpp  NETsimulator.h  Optimizer.cpp  Optimizer.h  Timer.cpp  Timer.h  Tools.cpp  Tools.h  fitness.cpp  fitness.h  list.cpp  list.h
Webuwka/: package.json  pnpm-lock.yaml
ak/: Main.java
chmurki2/: package.json
(+448 files in other folders)
