(lang dune 3.5)

(name paradygmatyprogramowania)

(generate_opam_files true)

(source
 (github rei-x/studia))

(authors "Bartosz Gotowski")

(maintainers "Bartosz Gotowski")

(license MIT)

(package
 (name paradygmatyprogramowania)
 (synopsis "Zadania z paradygmatów programowania")
 (depends ocaml dune ounit2 )
 (allow_empty))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
