[tool.poetry]
name = "laby02"
version = "0.1.0"
description = ""
authors = ["Bartosz Gotowski <bartoszgotowski03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
