[tool.poetry]
name = "laby04"
version = "0.1.0"
description = ""
authors = ["Bartosz Gotowski <bartoszgotowski03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^4.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
