[tool.poetry]
name = "laby08"
version = "0.1.0"
description = ""
authors = ["Bartosz Gotowski <bartoszgotowski03@gmail.com>"]
readme = "README.md"
packages = [{include = "laby08"}]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11"
pyqt6 = "^6.7.0"
pydantic = "^2.7.1"



[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
