[tool.poetry]
name = "laby02"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Bartosz Gotowski <bartoszgotowski03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
numpy = "^1.26.4"
pytest-watch = "^4.2.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.2"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
