[tool.poetry]
name = "projekt"
version = "0.1.0"
description = ""
authors = ["Bartosz Gotowski <bartoszgotowski03@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "<3.13,>=3.9"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
scipy = "^1.13.0"
pyqt6 = "^6.6.1"
sqlalchemy = "^2.0.30"
psycopg2-binary = "^2.9.9"
ydata-profiling = "^4.8.3"
geopy = "^2.4.1"
folium = "^0.16.0"
geopandas = "^0.14.4"
scikit-learn = "^1.4.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^8.1.1"
ruff = "^0.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
